Fix banner spacing

--- a/src/app/components/common/Banner.css
+++ b/src/app/components/common/Banner.css
@@ -1,16 +1,16 @@
 .name-container {
   text-align: center;
-  margin-top: 30px;
+  margin-top: 35px;
 }
 
 .description-container {
   text-align: center;
-  margin-top: -3px;
-  margin-bottom: 28px;
+  margin-top: -5px;
+  margin-bottom: 22px;
 }
 
 .name {
-  font-size: 18pt;
+  font-size: 20pt;
   color: #4e5053;
   display: inline;
 }
